[package]
name = "secret-populator"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.5.15"
aws-sdk-secretsmanager = "1.95.0"
clap = { version = "4.5.53", features = ["derive"] }
indicatif = "0.18.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
lto = true
