[package]
name = "secret-populator"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "CLI tool to create/delete large amounts of secrets in AWS Secrets Manager"
homepage = "https://github.com/simonmarty/secret-populator"
repository = "https://github.com/simonmarty/secret-populator"
readme = "README.md"

[dependencies]
aws-config = "1.5.15"
aws-sdk-secretsmanager = "1.95.0"
clap = { version = "4.5.53", features = ["derive"] }
indicatif = "0.18.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
lto = true
